--- a/index.html
+++ b/index.html
@@ -15,20 +15,36 @@
   </style>
 </head>
 <body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
+  <main class="container">
+    <div class="container__info">
+      <h1>
+        Learn to code by watching others
+      </h1>
+      <p>
+        See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. 
+      </p>
+    </div>
+    <div class="container__offer">
+      <section class="offer__price">
+        <p>
+          Try it free 7 days then $20/mo. thereafter
+        </p>
+      </section>
+      <section class="offer__form">
+        <div class="form" id="formulario">
+          <form action="/">
+            <input type="text" name="First Name" id="first" placeholder="First Name">
+            <input type="text" name="Last Name" id="last" placeholder="Last Name">
+            <input type="email" name="Email Address" id="email" placeholder="Email Address">
+            <input type="text" name="Password" id="pass" placeholder="Password">
+            <input type="submit" name="submit" id="submit" value="Claim your free trial">
+          </form>
+        </div>
+      </section>
+    </div>
+  </main>
+ 
 
   By clicking the button, you are agreeing to our Terms and Services
   
