--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css"> 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Intro component with sign up form</title>
@@ -20,7 +21,7 @@
       <h1>
         Learn to code by watching others
       </h1>
-      <p>
+      <p class="description">
         See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
         but understanding how developers think is invaluable. 
       </p>
@@ -28,30 +29,47 @@
     <div class="container__offer">
       <section class="offer__price">
         <p>
-          Try it free 7 days then $20/mo. thereafter
+          <span class="bold">Try it free 7 days</span> then $20/mo. thereafter
         </p>
       </section>
       <section class="offer__form">
         <div class="form" id="formulario">
           <form action="/">
-            <input type="text" name="First Name" id="first" placeholder="First Name">
-            <input type="text" name="Last Name" id="last" placeholder="Last Name">
-            <input type="email" name="Email Address" id="email" placeholder="Email Address">
-            <input type="text" name="Password" id="pass" placeholder="Password">
+            <fieldset>
+              <input type="text" name="First Name" id="first" placeholder="First Name">
+              <img src="images/icon-error.svg" alt="Error icon" class="error-icon" id="erroIcon01">
+              <div class="error-message"><p>First Name cannot be empty</p></div>
+            </fieldset>
+            <fieldset>
+              <input type="text" name="Last Name" id="last" placeholder="Last Name">
+              <img src="images/icon-error.svg" alt="Error icon" class="error-icon" id="erroIcon02">
+              <div class="error-message"><p>Last Name cannot be empty</p></div>
+            </fieldset>
+            <fieldset>
+              <input type="email" name="Email Address" id="email" placeholder="Email Address">
+              <img src="images/icon-error.svg" alt="Error icon" class="error-icon" id="erroIcon04">
+              <div class="error-message"><p>Looks like this is not an email</p></div>
+            </fieldset>
+            <fieldset>
+              <input type="text" name="Password" id="pass" placeholder="Password">
+              <img src="images/icon-error.svg" alt="Error icon" class="error-icon" id="erroIcon04">
+              <div class="error-message"><p>Password cannot be empty</p></div>
+            </fieldset>
             <input type="submit" name="submit" id="submit" value="Claim your free trial">
           </form>
+          <p>
+            By clicking the button, you are agreeing to our 
+           <span class="bold">Terms and Services</span>
+          </p>
         </div>
       </section>
     </div>
   </main>
- 
-
-  By clicking the button, you are agreeing to our Terms and Services
   
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">j3renes</a>.
     </p>
   </footer>
 </body>
